samples/_failures_safe/1761606949_cd77fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d76e159.c: In function ‘main’:
./samples/SAFE/__tmp_3d76e159.c:146:12: error: missing terminating " character
  146 |     printf("
      |            ^
./samples/SAFE/__tmp_3d76e159.c:146:5: error: expected expression at end of input
  146 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_3d76e159.c:146:5: error: expected declaration or statement at end of input
